{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 123,
  "lineage": "3df727cb-bf90-c636-c822-6fe4ccd520cc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-27T23:45:24.840-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-458006/global/firewalls/dev-allow-ssh",
            "log_config": [],
            "name": "dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/networks/dev-myapp-vpc-network",
            "priority": 1000,
            "project": "terraform-458006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/firewalls/dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "dev-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-27T23:45:25.280-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-458006/global/firewalls/dev-allow-web-8080",
            "log_config": [],
            "name": "dev-allow-web-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/networks/dev-myapp-vpc-network",
            "priority": 1000,
            "project": "terraform-458006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/firewalls/dev-allow-web-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "dev-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "myapp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250425",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 15,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-458006/zones/asia-south1-a/disks/dev-myapp-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-27T23:45:51.713-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "app": "myapp",
              "environment": "dev",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/terraform-458006/zones/asia-south1-a/instances/dev-myapp-server",
            "instance_id": "2565521274774395632",
            "label_fingerprint": "G1BBPKR7er4=",
            "labels": {
              "app": "myapp",
              "environment": "dev"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "0osQfwBouPs=",
            "name": "dev-myapp-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.150.177",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/networks/dev-myapp-vpc-network",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-458006/regions/asia-south1/subnetworks/dev-myapp-subnet",
                "subnetwork_project": "terraform-458006"
              }
            ],
            "project": "terraform-458006",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-458006/zones/asia-south1-a/instances/dev-myapp-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev-vm"
            ],
            "tags_fingerprint": "MHkOkvTmTeA=",
            "terraform_labels": {
              "app": "myapp",
              "environment": "dev",
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.vm_image",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-458006/global/networks/dev-myapp-vpc-network",
            "mtu": 0,
            "name": "dev-myapp-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5202240477048511767",
            "numeric_id": "5202240477048511767",
            "project": "terraform-458006",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/networks/dev-myapp-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-27T23:45:26.762-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.1.1",
            "id": "projects/terraform-458006/regions/asia-south1/subnetworks/dev-myapp-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "dev-myapp-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-458006/global/networks/dev-myapp-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-458006",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-458006/regions/asia-south1/subnetworks/dev-myapp-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 900523214741084905
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}